# 02_bigInt

./: .gitignore  CMakeLists.txt  main.cpp  Запусти - я соберу проект с тестами под Linux.sh  Я соберу проект без тестов под Linux.sh  Я соберу проект без тестов под Windows.cmd  Я соберу проект с тестами под Linux.sh  Я соберу проект с тестами под Windows.cmd
BigInteger/: big_integer.cpp  big_integer.h
SecondFunk/: SecFun_lib.lib  SecondaryFunction.cpp  SecondaryFunction.h
test/: CMakeLists.txt  test.cpp
